Fixed overflow issue on dersired pages and formated email verification template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -105,6 +105,12 @@ footer {
     background-color: #fff;
 }
 
+/* ------------------------------------------------------------- Sitewide */
+
+.section-overflow {
+    overflow: hidden !important;
+}
+
 /*---------------------------------------------------------------  Header */
 
 .header-design {
